--- a/app/assets/javascripts/misc/i18n-strings.js.erb
+++ b/app/assets/javascripts/misc/i18n-strings.js.erb
@@ -9,8 +9,6 @@ window.LoginGov = window.LoginGov || {};
   'instructions.password.strength.iv',
   'instructions.password.strength.v',
   'valid_email.validations.email.invalid',
-  'shared.time.minutes.one',
-  'shared.time.minutes.other',
   'zxcvbn.feedback.Use a few words, avoid common phrases',
   'zxcvbn.feedback.No need for symbols, digits, or uppercase letters',
   'zxcvbn.feedback.Add another word or two_ Uncommon words are better_',
@@ -49,7 +47,7 @@ window.LoginGov.I18n = {
       if (args.count === 1) {
         key += '.one';
       } else {
-        key += '.other';
+        key += '.many';
       }
     }
 
