--- a/app/views/profile/index.html.slim
+++ b/app/views/profile/index.html.slim
@@ -17,6 +17,8 @@
     class: 'h5 blue sans-serif underline hint--top hint--no-animate',
     tabindex: 0,
     'aria-label': t('tooltips.profile_idv'))
+  - unless current_user.decorate.identity_not_verified?
+    .h6.regular.right.border.rounded.p1.regular = t('headings.profile.verified_account')
   .mt2.mb4
     .py-12p.border-top
       .clearfix.mxn1
@@ -43,7 +45,12 @@
         .sm-col.sm-col-5.px1 = t('.phone')
         .sm-col.sm-col-7.px1 = @decrypted_pii.phone
 
-h2.h3.my0 = t('headings.profile.login_info')
+h2.h3.my0
+  = t('headings.profile.login_info')
+  - if current_user.decorate.identity_not_verified?
+    .h6.right.border.rounded.p1.regular
+      = t('headings.profile.basic_account')
+      = tooltip(t('tooltips.verified_account'))
 .mt2.mb4
   .py-12p.border-top
     .clearfix.mxn1
