--- a/app/views/verify/index.html.slim
+++ b/app/views/verify/index.html.slim
@@ -12,6 +12,14 @@ h1.h3.my0 = t('idv.titles.expectations')
     li.mb1 = t('idv.index.section_1.bullet_2')
     li.mb1 = t('idv.index.section_1.bullet_3')
 
+.mb-40p
+  h2.mb1.pb-tiny.h5.border-bottom.border-teal = t('idv.index.section_3.header')
+  .mb-12p.h6 = t('idv.index.section_3.subheader')
+  ul.mb0.teal-dots
+    li.mb1 = t('idv.index.section_3.bullet_1')
+    li.mb1 = t('idv.index.section_3.bullet_2_html')
+    li.mb1 = t('idv.index.section_3.bullet_3_html')
+
 p.mb3 = t('idv.index.paragraph_1')
 p.mb3.bold = t('idv.index.prompt')
 = link_to t('idv.index.continue_link'), verify_session_path, class: 'btn btn-primary btn-wide'
