--- a/app/views/shared/_nav_auth.html.slim
+++ b/app/views/shared/_nav_auth.html.slim
@@ -12,6 +12,8 @@ nav.bg-white
         '
         span.bold = current_user.email
         .mt-12p.h6.mxn1
+          = link_to t('shared.nav_auth.verify'), verify_path,
+            class: current_page?(verify_path) ? 'px1 bold gray text-decoration-none' : 'px1'
           = link_to t('shared.nav_auth.my_account'), profile_path,
             class: current_page?(profile_path) ? 'px1 bold gray text-decoration-none' : 'px1'
           = link_to t('links.sign_out'), destroy_user_session_path,
